--- a/packs/elastic/actions/indices.allocation.yaml
+++ b/packs/elastic/actions/indices.allocation.yaml
@@ -1,20 +1,16 @@
 ---
-description: Optimize indices
+description: Index Allocation
 enabled: true
 entry_point: curator_runner.py
-name: optimize
+name: indices.allocation
 parameters:
   action:
-    default: optimize
+    default: indices.allocation
     immutable: true
     type: string
   all_indices:
     description: Do not filter indices.  Act on all indices.
     type: boolean
-  delay:
-    default: 0
-    description: Pause *n* seconds after optimizing an index.
-    type: integer
   dry_run:
     default: false
     description: Do not perform any changes.
@@ -44,10 +40,6 @@ parameters:
     default: false
     description: Only operate on elected master node.
     type: boolean
-  max_num_segments:
-    default: 2
-    description: Merge to this number of segments per shard.
-    type: integer
   newer_than:
     description: Include only indices newer than n time_units.
     type: integer
@@ -59,7 +51,7 @@ parameters:
     description: Elasticsearch operation timeout in seconds. (It's equal to action
       timeout).
     immutable: true
-    type: integer
+    type: string
   port:
     description: Elasticsearch port.
     type: string
@@ -69,6 +61,10 @@ parameters:
   regex:
     description: Provide your own regex, e.g '^prefix-.*-suffix$'.
     type: string
+  rule:
+    description: Routing allocation rule to apply, e.g. tag=ssd
+    required: true
+    type: string
   suffix:
     description: Include only indices ending with suffix.
     type: string
@@ -77,7 +73,7 @@ parameters:
     description: Unit of time to reckon by [hours|days|weeks|months].
     type: string
   timeout:
-    default: 21600
+    default: 600
     description: Don't wait for action completion more then the specified timeout.
     type: integer
   timestring:
