--- a/packs/elastic/actions/snapshots.show.yaml
+++ b/packs/elastic/actions/snapshots.show.yaml
@@ -62,7 +62,9 @@ parameters:
     type: string
   snapshot:
     description: Include the provided snapshot in the list. A comma separated list.
-    type: string
+    items:
+      type: string
+    type: array
   suffix:
     description: Include only snapshots ending with suffix.
     type: string
