moving unrelated stuff into etc directory

--- a/packs/elastic/docker-compose.yml
+++ b/packs/elastic/docker-compose.yml
@@ -16,4 +16,4 @@ elk:
    - "9200:9200"
    - "10987:10987" # udp input
   volumes:
-   - ./conf.d:/etc/logstash/conf.d
+   - ./etc/conf.d:/etc/logstash/conf.d
