--- a/packs/st2/aliases/sensors_list.yaml
+++ b/packs/st2/aliases/sensors_list.yaml
@@ -1,4 +1,7 @@
 ---
-name: "st2-sensors-list"
+name: "st2_sensors_list"
 action_ref: "st2.sensors.list"
 description: "List available StackStorm sensors."
+formats:
+    - "list sensors"
+    - "list sensors from {{ pack }}"
