--- a/packs/st2/aliases/actions_list.yaml
+++ b/packs/st2/aliases/actions_list.yaml
@@ -3,5 +3,5 @@ name: "st2_actions_list"
 action_ref: "st2.actions.list"
 description: "List available StackStorm actions."
 formats:
-    - "list actions"
-    - "list actions from {{ pack }}"
+    - "st2 list actions"
+    - "st2 list actions from {{ pack }}"
