--- a/packs/st2/aliases/executions_get.yaml
+++ b/packs/st2/aliases/executions_get.yaml
@@ -3,7 +3,7 @@ name: "st2_executions_get"
 action_ref: "st2.executions.get"
 description: "Retrieve details for a single execution."
 formats:
-    - "get execution {{ id }}"
-    - "show execution {{ id }}"
-    - "executions get {{ id }}"
-    - "executions show {{ id }}"
+    - "st2 get execution {{ id }}"
+    - "st2 show execution {{ id }}"
+    - "st2 executions get {{ id }}"
+    - "st2 executions show {{ id }}"
