--- a/packs/st2/aliases/executions_list.yaml
+++ b/packs/st2/aliases/executions_list.yaml
@@ -3,6 +3,6 @@ name: "st2_executions_list"
 action_ref: "st2.executions.list"
 description: "List available StackStorm executions."
 formats:
-    - "list executions"
-    - "list executions with status {{ status }}"
-    - "list executions for action {{ action }}"
+    - "st2 list executions"
+    - "st2 list executions with status {{ status }}"
+    - "st2 list executions for action {{ action }}"
