--- a/packs/st2/aliases/executions_re_run.yaml
+++ b/packs/st2/aliases/executions_re_run.yaml
@@ -3,5 +3,5 @@ name: "st2_executions_re_run"
 action_ref: "st2.executions.re_run"
 description: "Re-run an action execution."
 formats:
-    - "re-run execution {{ id }}"
-    - "executions re-run {{ id }}"
+    - "st2 re-run execution {{ id }}"
+    - "st2 executions re-run {{ id }}"
