--- a/packs/chef/actions/install.yaml
+++ b/packs/chef/actions/install.yaml
@@ -19,3 +19,7 @@ parameters:
     download_path:
         description: 'Use to specify the directory into which a package is downloaded.'
         type: 'string'
+    timeout:
+        default: 300
+        description: Action timeout in seconds. Action will get killed if it doesn't finish in timeout seconds.
+        type: integer
