--- a/packs/chef/actions/client.yaml
+++ b/packs/chef/actions/client.yaml
@@ -24,3 +24,7 @@ parameters:
     rewrite_runlist:
         description: 'Permanently replace current run list with specified items'
         type: 'string'
+    timeout:
+        default: 1200
+        description: Action timeout in seconds. Action will get killed if it doesn't finish in timeout seconds.
+        type: integer
