--- a/packs/chef/actions/solo.yaml
+++ b/packs/chef/actions/solo.yaml
@@ -24,3 +24,7 @@ parameters:
     recipe_url:
         description: 'Pull down a remote gzipped tarball of recipes and untar it to the cookbook cache'
         type: 'string'
+    timeout:
+        default: 1200
+        description: Action timeout in seconds. Action will get killed if it doesn't finish in timeout seconds.
+        type: integer
