--- a/packs/chef/actions/apply.yaml
+++ b/packs/chef/actions/apply.yaml
@@ -17,10 +17,12 @@ parameters:
     execute:
         description: "Execute resources supplied in a string"
         type: string
-        required: true
     minimal_ohai:
         description: "Only run the bare minimum ohai plugins chef needs to function"
         type: boolean
+    recipe_file:
+        description: "Path to the recipe file to be executed (relative to a remote host)"
+        type: string
     timeout:
         default: 300
         description: Action timeout in seconds. Action will get killed if it doesn't finish in timeout seconds.
