Add "disable_formatting" parameter to the slack.post_message action.
With this parameter user can disable formatting and parsing of the message.

--- a/packs/slack/actions/post_message.yaml
+++ b/packs/slack/actions/post_message.yaml
@@ -21,3 +21,8 @@
       type: "string"
       description: "Bot icon"
       required: false
+    disable_formatting:
+      type: "boolean"
+      description: "Disable formatting, don't parse the message and treat it as raw text"
+      required: false
+      default: false
