Add support for compressing and decompressing values to the st2.set and st2.get actions.

--- a/packs/st2/actions/kv_get.yaml
+++ b/packs/st2/actions/kv_get.yaml
@@ -8,3 +8,7 @@ parameters:
   key:
     required: True
     type: string
+  decompress:
+    type: boolean
+    description: 'True if the value is compressed using bzip2 and should be decompressed before returning it'
+    required: False
