--- a/packs/travisci/actions/setup_build.yaml
+++ b/packs/travisci/actions/setup_build.yaml
@@ -1,8 +1,8 @@
-name: start_build
+name: setup_build
 runner_type: run-python
 description: Restart or Cancel a Build
 enabled: true
-entry_point: start_build.py
+entry_point: setup_build.py
 parameters:
   buildid:
     type: integer
