--- a/packs/mqtt/actions/publish.yaml
+++ b/packs/mqtt/actions/publish.yaml
@@ -12,4 +12,11 @@ parameters:
   message:
     type: "string"
     description: "Message payload"
-    required: true
+  qos:
+    type: "integer"
+    description: "Quality of Service to use for the message"
+    default: 0
+  retain:
+    type: "boolean"
+    description: "set the message to be retained (True) or not (False)."
+    default: false
