--- a/packs/bit-bucket/config.yaml
+++ b/packs/bit-bucket/config.yaml
@@ -1,4 +1,4 @@
 Host: https://bitbucket.org/api/1.0/
-username: razaaamir
-password: amadraza@512
-useremail: raza.aamir01@gmail.com
+username: <bitcuket-username>
+password: <your-bitbucket-password>
+useremail: <your-email>
