--- a/packs/travisci/actions/restart_build.yaml
+++ b/packs/travisci/actions/restart_build.yaml
@@ -1,11 +1,10 @@
-from lib.action import TravisCI
-
-
-class RestartBuildAction(TravisCI):
-    def run(self, buildid):
-        """
-        Restart a build by providing it's id
-        """
-        uri = self.config["uri"] + '/builds/' + str(buildid) + '/restart'
-        response = self._perform_request(uri, method="POST")
-        return response.content
+name: restart_build
+runner_type: run-python
+description: Restart a Build
+enabled: true
+entry_point: restart_build.py
+parameters:
+  buildid:
+    type: integer
+    description: id of the build to perform action on
+    required: true
