Update all the code so it only passes "path" instead of full url to "preform_request".
Also fix out of date descriptions.

--- a/packs/travisci/actions/cancel_build.yaml
+++ b/packs/travisci/actions/cancel_build.yaml
@@ -1,10 +1,10 @@
 name: cancel_build
 runner_type: run-python
-description: Cancel a Build
+description: Cancel a build.
 enabled: true
 entry_point: cancel_build.py
 parameters:
   buildid:
     type: integer
-    description: id of the build to perform action on
+    description: id of the build to cancel.
     required: true
