--- a/packs/travisci/actions/get_repo.yaml
+++ b/packs/travisci/actions/get_repo.yaml
@@ -1,10 +1,10 @@
 name: get_repo
 runner_type: run-python
-description: Get details of a repo by giving its id
+description: Retrieve details for a provided repository.
 enabled: true
 entry_point: get_repo.py
 parameters:
   repo:
     type: integer
-    description: supply id of repo for fetching its information
+    description: ID of the repository to retrieve the information for.
     required: true
