--- a/packs/travisci/actions/list_repos.yaml
+++ b/packs/travisci/actions/list_repos.yaml
@@ -1,9 +1,9 @@
 name: list_repos
 runner_type: run-python
-description: listing repos againsta a supplied user
+description: List repositories for the provided user.
 enabled: true
 entry_point: list_repos.py
 parameters:
   username:
     type: string
-    description: account to fetch repositories of 
+    description: User to retrieve the repositories for.
