--- a/packs/travisci/actions/list_branches.yaml
+++ b/packs/travisci/actions/list_branches.yaml
@@ -1,8 +1,8 @@
-name: get_branches
+name: list_branches
 runner_type: run-python
 description: List all branches for a given repository.
 enabled: true
-entry_point: get_branches.py
+entry_point: list_branches.py
 parameters:
   repo_id:
     type: integer
