--- a/packs/travisci/actions/list_hooks.yaml
+++ b/packs/travisci/actions/list_hooks.yaml
@@ -1,5 +1,5 @@
-name: get_hooks
+name: list_hooks
 runner_type: run-python
 description: List available hooks for a user.
 enabled: true
-entry_point: get_hooks.py
+entry_point: list_hooks.py
