Use consistent parameter names - add "_id" suffix for id (non string fields), consistently use the underscore.
Also fix more broken actions.

--- a/packs/travisci/actions/cancel_build.yaml
+++ b/packs/travisci/actions/cancel_build.yaml
@@ -4,7 +4,7 @@ description: Cancel a build.
 enabled: true
 entry_point: cancel_build.py
 parameters:
-  buildid:
+  build_id:
     type: integer
     description: id of the build to cancel.
     required: true
