--- a/packs/travisci/actions/disable_hook.yaml
+++ b/packs/travisci/actions/disable_hook.yaml
@@ -4,7 +4,7 @@ description: Disable hooks for a git repo.
 enabled: true
 entry_point: disable_hook.py
 parameters:
-  hookid:
+  hook_id:
     type: integer
-    description: id of the hook to disable.
+    description: ID of the hook to disable.
     required: true
