--- a/packs/travisci/actions/enable_hook.yaml
+++ b/packs/travisci/actions/enable_hook.yaml
@@ -4,7 +4,7 @@ description: Enable hook for a git repo.
 enabled: true
 entry_point: enable_hook.py
 parameters:
-  hookid:
+  hook_id:
     type: integer
-    description: id of the hook to enable.
+    description: ID of the hook to enable.
     required: true
