--- a/packs/lastline/config.yaml
+++ b/packs/lastline/config.yaml
@@ -1,5 +1,5 @@
 ### Place configuration data for your pack here.
 ---
 url: "https://analysis.lastline.com"
-key: ""
-api_token: ""
+key: "xxx"
+api_token: "yyy"
