do not commit fake credentials

--- a/packs/fireeye/config.yaml
+++ b/packs/fireeye/config.yaml
@@ -1,5 +1,5 @@
 ### Place configuration data for your pack here.
 ---
-api_url: "https://sometest.com"
-username: "someuser"
-password: "somepassword"
+api_url: ""
+username: ""
+password: ""
