--- a/packs/bit-bucket/actions/list_user_repo.yaml
+++ b/packs/bit-bucket/actions/list_user_repo.yaml
@@ -1,5 +1,5 @@
-name: get_user_repo
+name: list_user_repo
 runner_type: run-python
 description: Get details of repositories for a user
 enabled: true
-entry_point: get_user_repo.py
+entry_point: list_user_repo.py
