core.local -> code.local_sudo

--- a/packs/hubot/rules/restart_hubot.yaml
+++ b/packs/hubot/rules/restart_hubot.yaml
@@ -2,8 +2,7 @@
 action:
   parameters:
     cmd: service hubot restart
-    sudo: true
-  ref: core.local
+  ref: core.local_sudo
 criteria: {}
 description: Restart local hubot instance.
 enabled: false
