--- a/packs/st2/actions/upload_to_s3.yaml
+++ b/packs/st2/actions/upload_to_s3.yaml
@@ -12,7 +12,7 @@ parameters:
   bucket:
     type: "string"
     description: "S3 bucket to upload file"
-    required: true
+    default: "st2express-install"
   remote_file:
     type: "string"
     description: "Name of file on remote end"
