--- a/packs/bit-bucket/actions/archive_repo.yaml
+++ b/packs/bit-bucket/actions/archive_repo.yaml
@@ -6,5 +6,5 @@ entry_point: archive_repo.py
 parameters:
   repo:
     type: string
-    description: provide repositroy name for downloading as archive
+    description: provide repository name for getting a path to the archived repository
     required: true
