--- a/packs/bit-bucket/actions/list_services.yaml
+++ b/packs/bit-bucket/actions/list_services.yaml
@@ -1,10 +1,10 @@
-name: list_service
+name: list_services
 runner_type: run-python
 description: List all services for a given repository
 enabled: true
-entry_point: list_service.py
+entry_point: list_services.py
 parameters:
   repo:
     type: string
-    description: provide repositroy name for listing the branches
+    description: provide repositroy name
     required: true
