--- a/packs/bit-bucket/actions/archive_repo.yaml
+++ b/packs/bit-bucket/actions/archive_repo.yaml
@@ -1,10 +1,10 @@
 name: archive_repo
 runner_type: run-python
-description: Download a repository as an archive
+description: Retruns a path to the downloaded archived repository
 enabled: true
 entry_point: archive_repo.py
 parameters:
   repo:
     type: string
-    description: provide repository name for getting a path to the archived repository
+    description: provide repository name
     required: true
