--- a/packs/vsphere/actions/vm_hw_details_get.yaml
+++ b/packs/vsphere/actions/vm_hw_details_get.yaml
@@ -1,10 +1,16 @@
 ---
-  name: vm_detail_get
+  name: vm_hw_detail_get
   runner_type: run-python
   description: Retrieve details of a VM object
   entry_point: vm_hw_details_get.py
   parameters:
-    vms:
+    vm_ids:
+      type: array
+      description: Comma seperated list of VM IDs
+      required: false
+      position: 0
+    vm_names:
       type: array
       description: Comma seperated list of VM Names
-      required: true
+      required: false
+      position: 1
