add position to yaml, update variable name, switch to general input check function

--- a/packs/vsphere/actions/vm_hw_barebones_create.yaml
+++ b/packs/vsphere/actions/vm_hw_barebones_create.yaml
@@ -9,6 +9,7 @@
       type: "string"
       description: "Name of the new Virtual Machine"
       required: true
+      position: 0
     cluster:
       type: "string"
       description: "Cluster Name to Buid VM within"
