--- a/packs/vsphere/actions/vm_hw_cpu_mem_flex.yaml
+++ b/packs/vsphere/actions/vm_hw_cpu_mem_flex.yaml
@@ -9,10 +9,12 @@
       type: "string"
       description: "VM to Flex."
       required: false
+      position: 0
     vm_name:
       type: "string"
       description: "VM Name to Flex."
       required: false
+      position: 1
     cpu_flex:
       type: "integer"
       description: "Number of CPUs to allocate"
