--- a/packs/vsphere/actions/vm_hw_nic_add.yaml
+++ b/packs/vsphere/actions/vm_hw_nic_add.yaml
@@ -9,10 +9,12 @@
         type: "string"
         description: "Virtual Machine ID (vm-1234)"
         required: false
+        position: 0
       vm_name:
         type: "string"
         description: "Virtual Machine Name"
         required: false
+        position: 1
       network_name:
         type: "string"
         description: "Network to attach NIC to"
