--- a/packs/vsphere/actions/vm_hw_nic_edit.yaml
+++ b/packs/vsphere/actions/vm_hw_nic_edit.yaml
@@ -9,10 +9,12 @@
       type: "string"
       description: "VM to Flex."
       required: false
+      position: 0
     vm_name:
       type: "string"
       description: "VM Name to Flex."
       required: false
+      position: 1
     network_adapter:
       type: "string"
       description: "Name of Network Adapater"
