--- a/packs/vsphere/actions/vm_hw_uuid_get.yaml
+++ b/packs/vsphere/actions/vm_hw_uuid_get.yaml
@@ -1,10 +1,16 @@
 ---
-  name: vm_uuid_get
+  name: vm_hw_uuid_get
   runner_type: run-python
   description: Retrieve uuid of a VM object
   entry_point: vm_hw_uuid_get.py
   parameters:
-    vms:
+    vm_ids:
+      type: array
+      description: Comma seperated list of VM ids
+      required: false
+      position: 0
+    vm_names:
       type: array
       description: Comma seperated list of VM Names
-      required: true
+      required: false
+      position: 1
