Add missing property

--- a/packs/slack/actions/api.test.yaml
+++ b/packs/slack/actions/api.test.yaml
@@ -13,4 +13,7 @@ parameters:
   foo:
     required: false
     type: string
+  token:
+    required: false
+    type: string
 runner_type: run-python
