--- a/packs/hpe-icsp/actions/icsp_server_attributes_set.yaml
+++ b/packs/hpe-icsp/actions/icsp_server_attributes_set.yaml
@@ -7,7 +7,7 @@
   parameters:
     mid:
       type: "integer"
-      description: "ICSP MID for desired server."
+      description: "Server MID"
       required: true
       position: 0
     attributes:
