--- a/packs/hpe-icsp/actions/icsp_mid_get.yaml
+++ b/packs/hpe-icsp/actions/icsp_mid_get.yaml
@@ -6,12 +6,12 @@
   entry_point: "icsp_mid_get.py"
   parameters:
     uuid:
-      type: "string"
+      type: "array"
       description: "UUID of the Machine to retreive."
       required: false
       position: 0
     serialnumber:
-      type: "string"
+      type: "array"
       description: "Serial Number of server to find."
       required: false
       position: 1
